--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
     "next": "12.1.6",
+    "node-fetch": "2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
