--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.6",
     "node-fetch": "2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
