--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "font-awesome": "^4.7.0",
     "next": "12.1.6",
     "node-fetch": "2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
